# cashdireto

./: .env.example  .gitignore  CLAUDE.md  README.md
worker/: README.md  pyproject.toml
worker/cashdireto_worker/: __init__.py  config.py  contexto.py  db.py  ingest.py  ingest_cli.py  webapp.py
worker/cashdireto_worker/indicadores/: __init__.py  ap005.py  ap013.py  ap013b.py  ap013c.py  calculos.py  radar.py  raiox.py  runner.py
worker/cashdireto_worker/parsers/: __init__.py  _cerc.py
worker/cashdireto_worker/parsers/ap005/: __init__.py  loader.py  mapping.yaml  parser.py
worker/cashdireto_worker/parsers/ap007/: __init__.py  loader.py  mapping.yaml  parser.py
worker/cashdireto_worker/parsers/ap013/: __init__.py  (+3 more)
worker/cashdireto_worker/templates/: base.html  indicadores.html  upload.html
worker/tests/: test_ap005_indicadores.py  test_ap005_loader.py  test_ap005_parser.py  test_ap007_loader.py  test_ap007_parser.py  test_ap013_indicadores.py  test_ap013_loader.py  test_ap013_parser.py  test_ap013a_loader.py  test_ap013a_parser.py  test_ap013b_loader.py  test_ap013b_parser.py  test_ap013c_loader.py  test_ap013c_parser.py  test_config.py  test_contexto.py  test_db.py  test_indicadores.py  test_ingest.py  test_radar_indicadores.py  test_radar_loader.py  test_radar_parser.py  test_raiox_indicadores.py  test_raiox_loader.py  test_raiox_parser.py  test_runner_indicadores.py  test_webapp.py
worker/tests/fixtures/: ap005_sample.csv  ap007_sample.csv  ap013_sample.csv  ap013a_sample.csv  ap013b_sample.csv  ap013c_sample.csv  radar_sample.csv  raiox_sample.html
(+75 files in other folders)
