[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cashdireto-worker"
version = "0.0.0"
description = "Worker de ingestão — Cockpit de Recebíveis de Cartão"
requires-python = ">=3.11"
dependencies = [
  "supabase>=2.0",
  "psycopg[binary]>=3.1",
  "pyyaml>=6.0",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "lxml>=4.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "jinja2>=3.1", "python-multipart>=0.0.9"]

[tool.setuptools.packages.find]
include = ["cashdireto_worker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
